--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "depend/cryptopp"]
 	path = depend/cryptopp
-	url = https://github.com/lichuan/cryptopp.git
+	url = https://github.com/easybcapp/cryptopp.git
 [submodule "depend/rapidjson"]
 	path = depend/rapidjson
-	url = https://github.com/lichuan/rapidjson.git
+	url = https://github.com/easybcapp/rapidjson.git
